--- a/styles/styles.css
+++ b/styles/styles.css
@@ -191,7 +191,11 @@ main{
 
 
 
-
+.section-graficas-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .grafica-container {
     width: 500px;
     height: 300px;
